# Score-Management-System

./: CMakeLists.txt  Date_define.cpp  ID_define.cpp  OrderList_define.cpp  OrderList_head.h  Score Management System.sln  Score Management System.vcxproj  Score Management System.vcxproj.filters  package.sh  readme.txt  高考成绩管理系统_define.cpp  高考成绩管理系统_main.cpp
include/: Date_head.h  ID_head.h  OrderList_head.h  system_head.h
sample/: main.cpp
src/: Date_define.cpp  ID_define.cpp  IdentityCodePlace.txt  OrderList_define.cpp  system_define.cpp  要求.c
